src/test/ui/span/regions-infer-borrow-scope-within-loop.stderr
error[E0597]: `*x` does not live long enough
  --> $DIR/regions-infer-borrow-scope-within-loop.rs:13:21
   |
LL |         y = borrow(&*x);
   |                     ^^ borrowed value does not live long enough
...
LL |     }
   |     - `*x` dropped here while still borrowed
LL |     assert!(*y != 0);
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
